tests/snapshots/examples_fixtures/functions__test_undefined_variable_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/test_undefined_variable_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `c`.

  --> examples/functions/test_undefined_variable_error.flx:2:1
  |
2 | c = 10;
  | ^^^^^^^

Hint:
  Define it first: let c = ...;


Help:
  Did you mean one of: `chars`, `concat`, `contains`?
== stdout ==
<not executed>
